# med_insight_aI

backend/: .env.example  .gitignore  Taskfile.yml  docker-compose.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b106581f6f9_again_added_the_chats_and_chat_messages.py  1c1ec15cd702_added_the_user_model.py  2c6aee35cb30_added_the_file_name_in_the_scanned_.py  632d2455cd15_removed_the_unique_constrains.py  68fd6f506284_create_hf_models_table.py  872ce61f76b9_updaed_123.py  87f0479a2cea_updated_the_models.py  a3df4cf59093_removed_the_url.py  ac9d732dd15f_added_the_chats_and_chat_messages.py  b4abb1ce5fe9_update_the_hf_model.py  b9112a3b0163_added_the_scan_and_scaned_images_models.py  d1855083445b_added_the_number_of_images123.py  eec3ff0bbb43_added_the_order_and_updated_the_hf_model.py  ef4c477edd16_updated_the_chat_and_chatsmessages_model.py  fb093ad20c73_added_the_number_of_images.py
backend/api/v1/: __init__.py
backend/controllers/: __init__.py  auth.py  chat.py  hf_model.py  order.py  scan.py  user.py
backend/core/: config.py  server.py
backend/core/database/: __init__.py  database.py
backend/core/dependencies/: __init__.py  authentication.py  hugging_face.py  minion_dep.py  polar_dep.py  session.py
backend/core/exceptions/: __init__.py  (+1 more)
backend/repositories/: __init__.py  chat.py  hf_model.py  order.py  scan.py  user.py
backend/services/: __init__.py  hugging_face_service.py  minio_service.py  model_provider.py  openai_service.py  polar_service.py
backend/utils/: password_manager.py
ml_backend/: Taskfile.yml  main.py  pyproject.toml
(+109 files in other folders)
